--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.Container {
+    margin: 0;
+    max-width: 1000px;
 }
